fix the issue of first next button not playing on mobile

--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -17,7 +17,7 @@
   }
   & p{
     margin: 0;
-    color: $soft-background;
+    color: #5b576b;
   }
   & .avatar{
     width: 35px !important;
